--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,6 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 80vh;
-    max-height: 100%;
     box-sizing: border-box;
     padding: 20px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
@@ -26,7 +24,7 @@ h1 {
 
 #image-container img {
     max-width: 100%;
-    max-height: 100%;
+    max-height: 80vh;
     width: auto;
     height: auto;
     object-fit: contain;
