--- a/styles.css
+++ b/styles.css
@@ -3,29 +3,63 @@ body {
     height: 100%;
     margin: 0;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: rgb(251, 230, 234);
-}
-
-h1 {
-    text-align: center;
 }
 
 #image-container {
     display: flex;
     align-items: center;
     justify-content: center;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
+}
+
+#image {
     padding: 20px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
     background-color: white;
-}
-
-#image-container img {
-    max-width: 80vw;
-    max-height: 80vh;
+    /* max-width: 80vw; */
+    /* max-height: 70vh; */
     /* width: auto; */
     /* height: auto; */
     /* object-fit: contain; */
+    transition: padding 0.4s;
+}
+
+#image:hover {
+    padding: 25px;
+}
+
+#button {
+    margin-top: 4vh;
+    background-color: rgb(216, 81, 106);
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 15px;
+    font-size: 16px;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    animation: pulse 2s infinite;
+}
+
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+        box-shadow: none;
+    }
+
+    50% {
+        transform: scale(1.05);
+        box-shadow: 0 0 10px rgb(255, 186, 231);
+    }
+
+    100% {
+        transform: scale(1);
+        box-shadow: none;
+    }
 }
